Fix Supply Chain table size on mobile

--- a/css/style-add.css
+++ b/css/style-add.css
@@ -216,3 +216,12 @@ ul.corporate-citizenship-community-support li img {
     width: 50%;
   }
 }
+@media (max-width: 480px) {
+  .keymericTable {
+    font-size: 13px !important;
+  }
+  .keymericTable th,
+  .keymericTable td {
+    padding: .5rem !important;
+  }
+}
